@@ -1,5 +1,3 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-
 plugins {
     kotlin("jvm")
     kotlin("plugin.serialization")
@@ -14,9 +12,10 @@ repositories {
 
 application {
     mainClass.set("dk.sdu.cloud.MainKt")
+    applicationDefaultJvmArgs += listOf("--add-modules", "jdk.incubator.vector")
 }
 kotlin {
-    jvmToolchain(17)
+    jvmToolchain(20)
 
     sourceSets {
         val main by getting {
@@ -46,6 +45,7 @@ kotlin {
 
         all {
             languageSettings.enableLanguageFeature("InlineClasses")
+            languageSettings.enableLanguageFeature("ContextReceivers")
             languageSettings.progressiveMode = true
             languageSettings.optIn("kotlin.RequiresOptIn")
             languageSettings.optIn("kotlin.time.ExperimentalTime")
@@ -71,5 +71,5 @@ publishing {
 
 tasks.withType<Jar> {
     val name = "ucloud-launcher"
-    archiveName = "$name.jar"
+    archiveBaseName.set(name)
 }
